// 社区公益服务对接管理平台 — DBML（导入 https://dbdiagram.io 生成 ER 图）
// 逻辑关联（无 DB 外键）使用 Ref 虚线表达；与 schema.sql 保持一致

Table sys_region {
  id bigint [pk, increment, note: '主键']
  name varchar(100) [not null, note: '区域名称']
  level tinyint [not null, note: '1区 2街道 3社区']
  parent_id bigint [null, note: '父级区域']
  province varchar(64) [null, note: '省（展示）']
  city varchar(64) [null, note: '市（展示）']
  Note: '区域/网格表'
}

Table sys_user {
  id bigint [pk, increment]
  username varchar(50) [not null, unique]
  password_md5 char(32) [not null]
  role tinyint [not null, note: '1超管 2社区管理员 3普通用户']
  identity_type tinyint [not null, default: 1]
  community_id bigint [null]
  time_coins bigint [not null, default: 0]
  points bigint [not null, default: 0]
  identity_tag varchar(64)
  real_name varchar(50)
  phone varchar(20)
  email varchar(100)
  avatar_url varchar(255)
  gender tinyint
  address varchar(255)
  skill_tags json
  status tinyint [not null, default: 1]
  last_login_at datetime
  created_at datetime [not null]
  updated_at datetime [not null]
  is_deleted tinyint [not null, default: 0]
  Note: '用户表'
}

Table service_request {
  id bigint [pk, increment]
  requester_user_id bigint [not null]
  community_id bigint [null]
  service_type varchar(50) [not null]
  description text
  service_address varchar(255) [not null]
  expected_time datetime
  urgency_level tinyint [not null, default: 2]
  emergency_contact_name varchar(64)
  emergency_contact_phone varchar(32)
  emergency_contact_relation varchar(32)
  special_tags json
  status tinyint [not null, default: 0]
  audit_by_user_id bigint
  audit_at datetime
  reject_reason varchar(255)
  published_at datetime
  claimed_at datetime
  completed_at datetime
  created_at datetime [not null]
  updated_at datetime [not null]
  is_deleted tinyint [not null, default: 0]
  Note: '公益服务需求'
}

Table service_claim {
  id bigint [pk, increment]
  request_id bigint [not null]
  volunteer_user_id bigint [not null]
  claim_at datetime [not null]
  claim_status tinyint [not null, default: 1]
  service_hours decimal(6,2)
  hours_submitted_at datetime
  completion_note varchar(255)
  created_at datetime [not null]
  updated_at datetime [not null]
  is_deleted tinyint [not null, default: 0]
  Note: '认领记录'
}

Table service_evaluation {
  id bigint [pk, increment]
  claim_id bigint [not null, unique]
  request_id bigint [not null]
  resident_user_id bigint [not null]
  volunteer_user_id bigint [not null]
  rating tinyint [not null]
  content varchar(500)
  created_at datetime [not null]
  updated_at datetime [not null]
  is_deleted tinyint [not null, default: 0]
  Note: '服务评价'
}

Table announcement {
  id bigint [pk, increment]
  title varchar(200) [not null]
  content_html longtext [not null]
  content_text text
  target_scope tinyint [not null, default: 0]
  target_community_id bigint
  target_building_id bigint
  status tinyint [not null, default: 1]
  is_top tinyint [not null, default: 0]
  top_at datetime
  publisher_user_id bigint [not null]
  published_at datetime
  created_at datetime [not null]
  updated_at datetime [not null]
  is_deleted tinyint [not null, default: 0]
  Note: '社区公告'
}

Table sys_config {
  id bigint [pk, increment]
  config_key varchar(64) [not null, unique]
  config_value json [not null]
  updated_at datetime
  created_at datetime
  Note: '系统配置 KV'
}

Table backup_record {
  id bigint [pk, increment]
  record_type varchar(16) [not null]
  module varchar(64)
  format varchar(16)
  filename varchar(255)
  file_path varchar(512)
  file_size_mb decimal(10,2)
  status varchar(16) [not null, default: 'SUCCESS']
  note varchar(255)
  created_at datetime [not null]
  updated_at datetime
  is_deleted tinyint [not null, default: 0]
}

Table support_like {
  id bigint [pk, increment]
  total_count bigint [not null, default: 0]
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table todo_group {
  id bigint [pk, increment]
  user_id bigint [not null]
  title varchar(100) [not null]
  icon varchar(16) [not null]
  bg_color varchar(32)
  is_today tinyint [default: 0]
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table todo_task {
  id bigint [pk, increment]
  user_id bigint [not null]
  group_id bigint [not null]
  title varchar(255) [not null]
  is_done tinyint [default: 0]
  is_favorite tinyint [default: 0]
  is_today tinyint [default: 0]
  sort_order int [default: 0]
  done_date datetime
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table audit_log {
  id bigint [pk, increment]
  user_id bigint
  username varchar(64)
  role tinyint
  module varchar(64) [not null]
  action varchar(128) [not null]
  request_path varchar(256)
  http_method varchar(16)
  success tinyint [not null, default: 1]
  result_msg varchar(512)
  risk_level varchar(16) [default: 'NORMAL']
  ip varchar(64)
  user_agent varchar(512)
  elapsed_ms int
  created_at datetime [not null]
}

// ---------- 外键（与 schema.sql 一致）----------
Ref: service_request.requester_user_id > sys_user.id
Ref: service_request.audit_by_user_id > sys_user.id
Ref: service_claim.request_id > service_request.id
Ref: service_claim.volunteer_user_id > sys_user.id
Ref: service_evaluation.claim_id > service_claim.id
Ref: service_evaluation.request_id > service_request.id
Ref: service_evaluation.resident_user_id > sys_user.id
Ref: service_evaluation.volunteer_user_id > sys_user.id

// ---------- 逻辑关联（库中无 FK，作图用）----------
Ref: sys_user.community_id > sys_region.id
Ref: service_request.community_id > sys_region.id
Ref: announcement.target_community_id > sys_region.id
Ref: announcement.publisher_user_id > sys_user.id
Ref: sys_region.parent_id > sys_region.id
Ref: todo_group.user_id > sys_user.id
Ref: todo_task.user_id > sys_user.id
Ref: todo_task.group_id > todo_group.id
Ref: audit_log.user_id > sys_user.id
